// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET_USERS_REPORT.SUCCESS adds users count to global org 1`] = `
Object {
  "all": Array [
    Object {
      "community": true,
      "contactReport": Object {
        "memberCount": 100000,
        "some_prop": "Roge",
      },
      "id": "_global_community_id",
      "name": "MissionHub Community",
      "user_created": true,
    },
    Object {
      "id": "1",
      "name": "Roger's community",
    },
  ],
}
`;

exports[`LOAD_ORGANIZATIONS should save loaded orgs 1`] = `
Object {
  "all": Array [
    Object {
      "community": true,
      "id": "_global_community_id",
      "name": "MissionHub Community",
      "user_created": true,
    },
    Object {
      "id": "123",
    },
    Object {
      "id": "234",
    },
  ],
  "membersPagination": Object {
    "hasNextPage": true,
    "page": 1,
  },
  "surveysPagination": Object {
    "hasNextPage": true,
    "page": 1,
  },
}
`;

exports[`LOAD_ORGANIZATIONS should update existing orgs 1`] = `
Object {
  "all": Array [
    Object {
      "community": true,
      "id": "_global_community_id",
      "name": "MissionHub Community",
      "user_created": true,
    },
    Object {
      "celebratePagination": Object {
        "page": 0,
      },
      "challengePagination": Object {
        "page": 0,
      },
      "id": "123",
    },
    Object {
      "celebratePagination": Object {
        "page": 0,
      },
      "challengePagination": Object {
        "page": 0,
      },
      "id": "234",
    },
  ],
}
`;

exports[`REQUESTS.GET_GROUP_CHALLENGE_FEED.SUCCESS should recognize null organization_ids as global community 1`] = `
Object {
  "all": Array [
    Object {
      "challengeItems": Array [
        Object {
          "id": "roge",
        },
        Object {
          "id": "roger",
        },
      ],
      "challengePagination": Object {
        "hasNextPage": false,
        "page": 2,
      },
      "id": "_global_community_id",
    },
  ],
}
`;

exports[`should load contact reports for all organizations 1`] = `
Object {
  "all": Array [
    Object {
      "contactReport": Object {
        "contactsCount": 12,
        "id": "123",
        "unassignedCount": 10,
        "uncontactedCount": 10,
      },
      "id": "123",
      "name": "test org 1",
    },
    Object {
      "contactReport": Object {
        "contactsCount": 23,
        "id": "234",
        "unassignedCount": 10,
        "uncontactedCount": 14,
      },
      "id": "234",
      "name": "test org 2",
    },
  ],
}
`;
